2013-10-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c (main):  If commands are being executed interactively
	because the user said something like "gnuplot -", then execution should
	continue after an error message just as in a normal interactive session.
	Bug #1295

	* src/mouse.c (event_reset) src/term.c (check_for_mouse_events):  
	Must not send commands to the terminal if it has not yet been initialized.

2013-10-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.h src/set.c src/getcolor.c (quantize_gray):
	Change the algorithm used to assign palette colors in the case
	   set palette defined (...) maxcolors N
	where the gradient boundaries are unevenly spaced. Previous versions
	of quantize_gray() have shown a variety of bad outcomes.  This version
	has fewer, less ugly, bad outcomes but it is still sensitive to the
	choice of maxcolors.  Try changing maxcolors by +/- one if the generated
	palette is bad.
	Bug #1140 and others

	* src/command.c (test_palette_subcommand):  The "test palette" command
	does not need to zero the current input line, and hasn't needed to since
	lf_push/lf_pop were introduced 5 years ago.

2013-10-18  Christoph Bersch <usenet@bersch.net>

	* src/gadgets.h  src/graphics.c  src/graphics.h src/save.c src/set.c 
	demo/all.dem demo/clipobject.dem docs/gnuplot.doc:
	New object attribute clip/noclip.  "clip" retains the current default,
	clip to plot boundary unless one or more vertices are given in screen
	coordinates.  "noclip" clips to the canvas.

2013-10-18  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc term-ja.diff:  Sync translation to version 1.830

2013-10-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (place_objects):  Make clipping of various objects
	more consistent.  Clip to graph unless the center or some vertex is
	specified in screen coordinates.

	* src/save.c (save_object):  "show object N" was incorrectly printing
	lines for other objects as well.
