@@ -127,7 +127,7 @@ Ethan's List (2012):
   + apply in-line plot ranges only to the immediately following plot clause
 
 Remove obsolete files.  But are they truly obsolete?
-  term/pc.trm src/*.asm src/corplot.c src/corgraph.c
+  term/pc.trm src/*.asm src/corplot.c
   term/openstep.trm term/next.trm src/OpenStep/ src/NeXT/
   config/makefile.emx config/makefile.unx 
 
